--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "build": "babel src -d dist",
     "test": "npm start"
   },
   "author": "",
@@ -16,5 +17,10 @@
     "express": "^5.1.0",
     "i": "^0.3.7",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5"
   }
 }
