--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "i": "^0.3.7",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
